--- a/src/components/bar/pagination/pagination.css
+++ b/src/components/bar/pagination/pagination.css
@@ -11,6 +11,7 @@
   width: 30px;
   height: 20px;
   display: flex;
+  align-items: center;
   text-align: center;
   border-radius: 4px;
   cursor: pointer;
