--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -54,6 +54,7 @@
   display: flex;
   cursor: pointer;
   justify-content: center;
+  align-items: center;
 }
 
 .nav-item__border {
@@ -128,7 +129,9 @@
   border-radius: 5px;
   width: 20px;
   height: 24px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (max-width: 960px) {
