--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -94,8 +94,8 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  border: 2px solid #eb0028;
-  border-radius: 6px;
+  /* border: 2px solid #eb0028;
+  border-radius: 6px; */
   padding: 10px;
   cursor: pointer;
 }
