--- a/src/components/auth/loginform/login.css
+++ b/src/components/auth/loginform/login.css
@@ -87,6 +87,25 @@
   opacity: 0.5;
 }
 
+.btn-login{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  height: 40px;
+  min-width:150px;
+  background-color: #fff;
+  outline: none;
+  border: 1px solid #999;
+  border-radius: 3px;
+  font-weight: 600;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.btn-login:hover{
+opacity: 0.8;
+}
+
 @media screen and (max-width: 960px) {
   .login-form {
     box-shadow: none;
